[project]
name = "rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
]
